--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "gsap": "^3.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
