--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
